Move files from HAL repository
This patch adds nrfd sources from HAL repository. HAL repo baseline:
7ebaceb8bd464e0df71f7c26eda2b3b4bc7e2f5b

--- a/Makefile.am
+++ b/Makefile.am
@@ -58,11 +58,15 @@ ell_sources = ell/ell.h ell/private.h ell/missing.h \
 
 ell_libell_internal_la_SOURCES = $(ell_sources)
 
-src_nrfd_SOURCES = src/main.c
+src_nrfd_SOURCES = src/main.c \
+		   src/settings.h src/settings.c \
+		   src/manager.h src/manager.c
 
-src_nrfd_LDADD = ell/libell-internal.la -lm
+src_nrfd_LDADD = @GLIB_LIBS@ @GIO_UNIX_LIBS@ @JSON_LIBS@ \
+		ell/libell-internal.la -lm
+
 src_nrfd_LDFLAGS = $(AM_LDFLAGS)
-src_nrfd_CFLAGS = $(AM_CFLAGS)
+src_nrfd_CFLAGS = $(AM_CFLAGS) @GLIB_CFLAGS@ @GIO_UNIX_CFLAGS@ @JSON_CFLAGS@
 
 BUILT_SOURCES = ell/internal
 
