--- a/configure.ac
+++ b/configure.ac
@@ -13,7 +13,8 @@ AC_PREFIX_DEFAULT(/usr/local)
 
 PKG_PROG_PKG_CONFIG
 
-COMPILER_FLAGS
+COMPILER_WARNING_CFLAGS
+COMPILER_BUILD_CFLAGS
 
 AC_LANG_C
 
